--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "heroicons": "^2.1.5",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.0"
   },
   "devDependencies": {
     "eslint": "^8",
