--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
+    "axios": "^1.7.7",
     "heroicons": "^2.1.5",
     "next": "14.2.14",
     "react": "^18",
