--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/react": "^18.3.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
