--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.7",
+    "classnames": "^2.5.1",
     "heroicons": "^2.1.5",
     "next": "14.2.14",
     "query-string": "^9.1.1",
